# -*- coding: utf-8 -*-
[metadata]
name = tut
summary = desc
description-file =
    README.md
author = wout decrop
author-email = woutdec@hotmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/woutdecrop/tut
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    tut

[entry_points]
deepaas.v2.model =
    tut = tut.api
